# userspace-ntos

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  ntdll_plan.md  run.sh
.github/workflows/: ci.yml
components/configuration-manager/: Cargo.toml  build.sh
components/configuration-manager/src/: allocator.rs  main.rs
components/driver-host/: Cargo.toml  README.md  build.sh
components/driver-host-async/: Cargo.toml  build.sh
components/driver-host-direg/: Cargo.toml  build.sh
components/driver-host-dma/: Cargo.toml  build.sh
components/driver-host-exec/: Cargo.toml  README.md  build.sh
components/driver-host-loadercompat/: Cargo.toml  build.sh  link.ld
components/driver-host-mmio/: Cargo.toml  build.sh  triplet.json
components/driver-host-mmio/scripts/: run-driver-host-mmio.sh
components/driver-host-mmio/src/: main.rs
components/driver-host-ntdll/: Cargo.toml  build.sh
components/driver-host-ntdll/src/: allocator.rs  main.rs
components/driver-host-pnp/: .gitignore  Cargo.toml  build.sh
components/driver-host-pnp/src/: allocator.rs  elf_loader.rs  main.rs  surt_client.rs
components/driver-host-power/: Cargo.toml  build.sh
components/driver-host-svc/: Cargo.toml  README.md  build.sh
components/driver-host-svc/src/: driver_host.rs  io_side.rs  main.rs
components/driver-host-um/: Cargo.toml  build.sh  link.ld
components/driver-host-um/src/: main.rs
components/driver-host-umdf/: Cargo.toml  build.sh
components/driver-host-umdf/src/: main.rs
components/driver-host-wdf/: Cargo.toml  build.sh
components/driver-host-wdfhw/: Cargo.toml  build.sh
components/driver-host-wdfhw/src/: main.rs
components/driver-host/src/: allocator.rs  io_side.rs  main.rs  peer.rs
components/hal-svc/: Cargo.toml  build.sh
components/hal-svc/src/: driver_host.rs  hal_service.rs  main.rs
components/io-manager/: Cargo.toml  README.md  build.sh
components/io-manager/src/: client.rs  main.rs  server.rs
components/ntos-executive/: Cargo.toml  build.sh
components/ntos-executive/src/: allocator.rs  alpc_selftest.rs  cm_server.rs  device_io.rs  driver_host.rs  driver_launch.rs  driver_pe.rs  exec_handler.rs  fs_loader.rs  img_spawn.rs  io_server.rs  isr.rs  kmdf_host.rs  loader_trace_diag.rs  lpc_server.rs  main.rs  npfs_host.rs  ntoskrnl_shared.rs  pnp.rs  rendezvous.rs  selftests.rs  service_sec_image.rs  spawn_hosts.rs  storage_host.rs  win32k_glue.rs  win32k_host.rs  win32k_pe.rs  win32k_subsystem.rs
components/object-manager/: Cargo.toml  README.md  build.sh
components/object-manager/src/: main.rs
components/object-service/: Cargo.toml  README.md  build.sh
components/pnp-svc/: Cargo.toml  build.sh
components/pnp-svc/src/: driver_host.rs  main.rs  pnp_manager.rs
crates/nt-address-space/: Cargo.toml
crates/nt-address-space/src/: lib.rs  tests.rs
crates/nt-alpc/: Cargo.toml
crates/nt-alpc-abi/: Cargo.toml
crates/nt-alpc-abi/src/: lib.rs
crates/nt-alpc/src/: lib.rs  tests.rs
crates/nt-cache-manager/: Cargo.toml
crates/nt-cache-manager/src/: lib.rs  tests.rs
crates/nt-cm-resources/: Cargo.toml
crates/nt-cm-resources/src/: lib.rs
crates/nt-compat-exports/: Cargo.toml
crates/nt-compat-exports/src/: driver_resolve.rs  hal.rs  lib.rs  ntoskrnl.rs  registry.rs  rtl.rs  ssdt.rs  win32k.rs  win32k_resolve.rs
crates/nt-config-abi/: Cargo.toml
crates/nt-config-abi/src/: lib.rs
crates/nt-config-client/: Cargo.toml
crates/nt-config-client/src/: lib.rs
crates/nt-config-manager/: Cargo.toml
crates/nt-config-manager/src/: lib.rs  property.rs  registry.rs
crates/nt-config-server/: Cargo.toml
crates/nt-config-server/src/: lib.rs
crates/nt-config-store/: Cargo.toml
crates/nt-config-store/src/: codec.rs  lib.rs  store.rs  tests.rs
crates/nt-delay-execution/: Cargo.toml
crates/nt-dll-registry/: Cargo.toml
crates/nt-dll-registry/src/: lib.rs
crates/nt-dma-abi/: Cargo.toml
crates/nt-dma-abi/src/: lib.rs
crates/nt-dma-manager/: Cargo.toml
crates/nt-dma-manager/src/: lib.rs
crates/nt-driver-abi/: Cargo.toml
crates/nt-driver-abi/src/: lib.rs
crates/nt-driver-host/: Cargo.toml
crates/nt-driver-runtime/: Cargo.toml
crates/nt-driver-supervisor/: Cargo.toml
crates/nt-driver-test-fixtures/: Cargo.toml
crates/nt-fs/: Cargo.toml
crates/nt-hal-abi/: Cargo.toml
crates/nt-hive-core/: Cargo.toml
crates/nt-hive-regf/: Cargo.toml
crates/nt-io-abi/: Cargo.toml
crates/nt-io-client/: Cargo.toml
crates/nt-io-completion/: Cargo.toml
crates/nt-io-manager/: Cargo.toml
crates/nt-io-server/: Cargo.toml
crates/nt-kernel-abi/: Cargo.toml
crates/nt-kernel-exec/: Cargo.toml
crates/nt-loader-trace/: Cargo.toml
crates/nt-lpc-abi/: Cargo.toml
crates/nt-lpc-client/: Cargo.toml
crates/nt-lpc-server/: Cargo.toml
crates/nt-mdl/: Cargo.toml
crates/nt-memory-manager/: Cargo.toml
crates/nt-ntdll/: Cargo.toml
crates/nt-ntdll-dll/: Cargo.toml  x86_64-pc-windows-gnullvm-nostd.json
crates/nt-ntdll-layout/: Cargo.toml
crates/nt-object-abi/: Cargo.toml
crates/nt-object-client/: Cargo.toml
crates/nt-object-manager/: Cargo.toml
crates/nt-object-server/: Cargo.toml
crates/nt-pe-loader/: Cargo.toml
crates/nt-pnp/: Cargo.toml
crates/nt-pnp-abi/: Cargo.toml
crates/nt-pnp-manager/: Cargo.toml
crates/nt-port-core/: Cargo.toml
crates/nt-power-abi/: Cargo.toml
crates/nt-power-manager/: Cargo.toml
crates/nt-power-types/: Cargo.toml
crates/nt-process/: Cargo.toml
docs/: component-harness.md  n-threads-multiplex.md  user-callback-dispatch.md
plans/: P0-executive-core.md  P1-hardware-hal.md  P2-storage-fs-registry.md  P3-native-syscall-process.md  P4-lpc-csrss.md  P5-services-startup.md  P6-win32k-graphical.md  P7-reactos-integration.md  P8-win7-pivot.md  README.md
scripts/: build_ntdll_dll.sh  run-driver-host-exec.sh  run-driver-host-svc.sh  run-driver-host.sh  run-executive.sh  run-io-manager.sh  run-ntdll-trap.sh  run-object-manager.sh  run-object-service.sh  run.sh
tasks/: deadcode-killlist.md  lessons.md  next-boot-plan.md  todo.md
(+358 files in other folders)
