# userspace-ntos — top-level workspace for the host-testable NT executive crates.
#
# The kernel-bound bins (crates/ntos-root, components/*) are standalone crates
# with their own [workspace] + custom bare-metal target, so they are excluded
# here; this workspace is the pure Rust core that runs under `cargo test` on the
# host (no seL4, no QEMU).
[workspace]
resolver = "2"
members = [
    "crates/nt-status",
    "crates/nt-types",
    "crates/nt-object-abi",
    "crates/nt-object-manager",
    "crates/nt-object-server",
    "crates/nt-object-client",
    "crates/nt-io-abi",
    "crates/nt-io-manager",
    "crates/nt-io-server",
    "crates/nt-io-client",
    "crates/nt-kernel-abi",
    "crates/nt-pe-loader",
    "crates/nt-compat-exports",
    "crates/nt-driver-abi",
    "crates/nt-driver-host",
    "crates/nt-kernel-exec",
    "crates/nt-hal-abi",
    "crates/nt-cm-resources",
    "crates/nt-pnp-abi",
    "crates/nt-pnp-manager",
    "crates/nt-resource-manager",
    "crates/nt-register-access",
    "crates/nt-sim-device",
    "crates/nt-driver-runtime",
    "crates/nt-driver-test-fixtures",
    "tools/driver-import-report",
]
exclude = [
    "rust-micro",
    "crates/ntos-root",
    "references",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stakach/userspace-ntos"
authors = ["Stephen von Takach <steve@place.technology>"]

[workspace.dependencies]
bitflags = { version = "2", default-features = false }
nt-status = { path = "crates/nt-status" }
nt-types = { path = "crates/nt-types" }
nt-object-abi = { path = "crates/nt-object-abi" }
nt-object-manager = { path = "crates/nt-object-manager" }
nt-object-server = { path = "crates/nt-object-server" }
nt-object-client = { path = "crates/nt-object-client" }
nt-io-abi = { path = "crates/nt-io-abi" }
nt-io-manager = { path = "crates/nt-io-manager" }
nt-io-server = { path = "crates/nt-io-server" }
nt-io-client = { path = "crates/nt-io-client" }
nt-kernel-abi = { path = "crates/nt-kernel-abi" }
nt-pe-loader = { path = "crates/nt-pe-loader" }
nt-compat-exports = { path = "crates/nt-compat-exports" }
nt-driver-abi = { path = "crates/nt-driver-abi" }
nt-driver-host = { path = "crates/nt-driver-host" }
nt-kernel-exec = { path = "crates/nt-kernel-exec" }
nt-hal-abi = { path = "crates/nt-hal-abi" }
nt-cm-resources = { path = "crates/nt-cm-resources" }
nt-pnp-abi = { path = "crates/nt-pnp-abi" }
nt-pnp-manager = { path = "crates/nt-pnp-manager" }
nt-resource-manager = { path = "crates/nt-resource-manager" }
nt-register-access = { path = "crates/nt-register-access" }
nt-sim-device = { path = "crates/nt-sim-device" }
nt-driver-runtime = { path = "crates/nt-driver-runtime" }
nt-driver-test-fixtures = { path = "crates/nt-driver-test-fixtures" }
