# userspace-ntos — top-level workspace for the host-testable NT executive crates.
#
# The kernel-bound bins (crates/ntos-root, components/*) are standalone crates
# with their own [workspace] + custom bare-metal target, so they are excluded
# here; this workspace is the pure Rust core that runs under `cargo test` on the
# host (no seL4, no QEMU).
[workspace]
resolver = "2"
members = [
    "crates/nt-status",
    "crates/nt-types",
    "crates/nt-object-abi",
    "crates/nt-object-manager",
    "crates/nt-object-server",
    "crates/nt-object-client",
    "crates/nt-port-core",
    "crates/nt-lpc-abi",
    "crates/nt-lpc-server",
    "crates/nt-lpc-client",
    "crates/nt-alpc-abi",
    "crates/nt-alpc",
    "crates/nt-io-abi",
    "crates/nt-io-manager",
    "crates/nt-io-server",
    "crates/nt-io-client",
    "crates/nt-io-completion",
    "crates/nt-kernel-abi",
    "crates/nt-pe-loader",
    "crates/nt-compat-exports",
    "crates/nt-driver-abi",
    "crates/nt-driver-host",
    "crates/nt-kernel-exec",
    "crates/nt-hal-abi",
    "crates/nt-cm-resources",
    "crates/nt-pnp",
    "crates/nt-pnp-abi",
    "crates/nt-power-types",
    "crates/nt-power-abi",
    "crates/nt-mdl",
    "crates/nt-dma-abi",
    "crates/nt-dma-manager",
    "crates/nt-wdf-object",
    "crates/nt-wdf-types",
    "crates/nt-wdf-request",
    "crates/nt-wdf-queue",
    "crates/nt-wdf-runtime",
    "crates/nt-wdf-interrupt",
    "crates/nt-wdf-dma",
    "crates/nt-config-manager",
    "crates/nt-config-client",
    "crates/nt-config-server",
    "crates/nt-config-abi",
    "crates/nt-config-store",
    "crates/nt-setupapi",
    "crates/nt-hive-core",
    "crates/nt-hive-regf",
    "crates/nt-fs",
    "crates/nt-cache-manager",
    "crates/nt-memory-manager",
    "crates/nt-address-space",
    "crates/nt-process",
    "crates/nt-security",
    "crates/nt-syscall",
    "crates/nt-user-host",
    "crates/nt-power-manager",
    "crates/nt-pnp-manager",
    "crates/nt-root-bus",
    "crates/nt-um-abi",
    "crates/nt-driver-supervisor",
    "crates/nt-resource-manager",
    "crates/nt-register-access",
    "crates/nt-sim-device",
    "crates/nt-driver-runtime",
    "crates/nt-driver-test-fixtures",
    "crates/nt-dll-registry",
    "crates/nt-loader-trace",
    "crates/nt-delay-execution",
    "crates/nt-thread-start",
    "tools/driver-import-report",
]
exclude = [
    "rust-micro",
    "crates/ntos-root",
    "references",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stakach/userspace-ntos"
authors = ["Stephen von Takach <steve@place.technology>"]

[workspace.dependencies]
bitflags = { version = "2", default-features = false }
nt-status = { path = "crates/nt-status" }
nt-types = { path = "crates/nt-types" }
nt-object-abi = { path = "crates/nt-object-abi" }
nt-object-manager = { path = "crates/nt-object-manager" }
nt-object-server = { path = "crates/nt-object-server" }
nt-object-client = { path = "crates/nt-object-client" }
nt-port-core = { path = "crates/nt-port-core" }
nt-lpc-abi = { path = "crates/nt-lpc-abi" }
nt-lpc-server = { path = "crates/nt-lpc-server" }
nt-lpc-client = { path = "crates/nt-lpc-client" }
nt-alpc-abi = { path = "crates/nt-alpc-abi" }
nt-alpc = { path = "crates/nt-alpc" }
nt-io-abi = { path = "crates/nt-io-abi" }
nt-io-manager = { path = "crates/nt-io-manager" }
nt-io-server = { path = "crates/nt-io-server" }
nt-io-client = { path = "crates/nt-io-client" }
nt-io-completion = { path = "crates/nt-io-completion" }
nt-kernel-abi = { path = "crates/nt-kernel-abi" }
nt-pe-loader = { path = "crates/nt-pe-loader" }
nt-compat-exports = { path = "crates/nt-compat-exports" }
nt-driver-abi = { path = "crates/nt-driver-abi" }
nt-driver-host = { path = "crates/nt-driver-host" }
nt-kernel-exec = { path = "crates/nt-kernel-exec" }
nt-hal-abi = { path = "crates/nt-hal-abi" }
nt-cm-resources = { path = "crates/nt-cm-resources" }
nt-pnp = { path = "crates/nt-pnp" }
nt-pnp-abi = { path = "crates/nt-pnp-abi" }
nt-power-types = { path = "crates/nt-power-types" }
nt-power-abi = { path = "crates/nt-power-abi" }
nt-mdl = { path = "crates/nt-mdl" }
nt-dma-abi = { path = "crates/nt-dma-abi" }
nt-dma-manager = { path = "crates/nt-dma-manager" }
nt-wdf-object = { path = "crates/nt-wdf-object" }
nt-wdf-types = { path = "crates/nt-wdf-types" }
nt-wdf-request = { path = "crates/nt-wdf-request" }
nt-wdf-queue = { path = "crates/nt-wdf-queue" }
nt-wdf-runtime = { path = "crates/nt-wdf-runtime" }
nt-wdf-interrupt = { path = "crates/nt-wdf-interrupt" }
nt-wdf-dma = { path = "crates/nt-wdf-dma" }
nt-config-manager = { path = "crates/nt-config-manager" }
nt-config-client = { path = "crates/nt-config-client" }
nt-config-server = { path = "crates/nt-config-server" }
nt-config-abi = { path = "crates/nt-config-abi" }
nt-config-store = { path = "crates/nt-config-store" }
nt-setupapi = { path = "crates/nt-setupapi" }
nt-hive-core = { path = "crates/nt-hive-core" }
nt-fs = { path = "crates/nt-fs" }
nt-cache-manager = { path = "crates/nt-cache-manager" }
nt-memory-manager = { path = "crates/nt-memory-manager" }
nt-address-space = { path = "crates/nt-address-space" }
nt-process = { path = "crates/nt-process" }
nt-security = { path = "crates/nt-security" }
nt-syscall = { path = "crates/nt-syscall" }
nt-user-host = { path = "crates/nt-user-host" }
nt-power-manager = { path = "crates/nt-power-manager" }
nt-pnp-manager = { path = "crates/nt-pnp-manager" }
nt-root-bus = { path = "crates/nt-root-bus" }
nt-um-abi = { path = "crates/nt-um-abi" }
nt-driver-supervisor = { path = "crates/nt-driver-supervisor" }
nt-resource-manager = { path = "crates/nt-resource-manager" }
nt-register-access = { path = "crates/nt-register-access" }
nt-sim-device = { path = "crates/nt-sim-device" }
nt-driver-runtime = { path = "crates/nt-driver-runtime" }
nt-driver-test-fixtures = { path = "crates/nt-driver-test-fixtures" }
nt-loader-trace = { path = "crates/nt-loader-trace" }
nt-delay-execution = { path = "crates/nt-delay-execution" }
nt-thread-start = { path = "crates/nt-thread-start" }
