[workspace]

[package]
name = "ntos-configuration-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4-rt = { path = "../../rust-micro/crates/sel4-rt" }
nt-config-manager = { path = "../../crates/nt-config-manager" }
nt-config-store = { path = "../../crates/nt-config-store" }
nt-setupapi = { path = "../../crates/nt-setupapi" }
nt-hive-core = { path = "../../crates/nt-hive-core" }
nt-fs = { path = "../../crates/nt-fs" }
nt-cache-manager = { path = "../../crates/nt-cache-manager" }
nt-memory-manager = { path = "../../crates/nt-memory-manager" }
nt-address-space = { path = "../../crates/nt-address-space" }
nt-process = { path = "../../crates/nt-process" }
nt-security = { path = "../../crates/nt-security" }
nt-syscall = { path = "../../crates/nt-syscall" }
nt-user-host = { path = "../../crates/nt-user-host" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
codegen-units = 1
overflow-checks = false
