# The Driver Host executor as a seL4 component: a bare-metal root task that maps a
# real WDM .sys image executable in its own VSpace and runs its DriverEntry under
# the Microsoft x64 ABI on the rust-micro kernel. Built independently (own
# workspace + custom target); staged as the kernel's rootserver by build.sh.
[workspace]

[package]
name = "ntos-driver-host-wdfhw"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "ntos-driver-host-wdfhw"
path = "src/main.rs"

[dependencies]
sel4-rt = { path = "../../rust-micro/crates/sel4-rt" }
nt-pe-loader = { path = "../../crates/nt-pe-loader" }
nt-wdf-object = { path = "../../crates/nt-wdf-object" }
nt-wdf-types = { path = "../../crates/nt-wdf-types" }
nt-wdf-request = { path = "../../crates/nt-wdf-request" }
nt-wdf-queue = { path = "../../crates/nt-wdf-queue" }
nt-wdf-runtime = { path = "../../crates/nt-wdf-runtime" }
nt-wdf-interrupt = { path = "../../crates/nt-wdf-interrupt" }
nt-wdf-dma = { path = "../../crates/nt-wdf-dma" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
codegen-units = 1
overflow-checks = false

[profile.dev]
panic = "abort"
