# The NT Object Manager as TWO isolated seL4 components (client + server) talking
# over SURT rings, brokered by the rootserver. Standalone bare-metal crate (own
# workspace + custom target); staged as the kernel rootserver by build.sh.
[workspace]

[package]
name = "ntos-executive"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "ntos-executive"
path = "src/main.rs"

[features]
# Grind-era verbose trace diagnostics (winlogon loader-trace ring dump + per-fault
# demand-map / throttled trace prints). OFF by default → clean serial. The milestone
# markers, spec PASS/FAIL lines, and the gate summary are NEVER gated by this.
default = []
debug-trace = []

[dependencies]
# Kernel ABI + SURT transport.
sel4-rt = { path = "../../rust-micro/crates/sel4-rt" }
surt-sel4 = "0.1"
# The NT object-manager stack (built no_std + alloc here).
nt-status = { path = "../../crates/nt-status" }
nt-types = { path = "../../crates/nt-types" }
nt-object-abi = { path = "../../crates/nt-object-abi" }
nt-object-manager = { path = "../../crates/nt-object-manager" }
nt-object-server = { path = "../../crates/nt-object-server" }
nt-object-client = { path = "../../crates/nt-object-client" }
# The NT LPC connection broker (control plane) — isolated over SURT, like the object stack.
nt-port-core = { path = "../../crates/nt-port-core" }
nt-lpc-abi = { path = "../../crates/nt-lpc-abi" }
nt-lpc-server = { path = "../../crates/nt-lpc-server" }
nt-lpc-client = { path = "../../crates/nt-lpc-client" }
# The ALPC adapter over the same nt-port-core — a peer of the LPC adapter (the bridge).
nt-alpc-abi = { path = "../../crates/nt-alpc-abi" }
nt-alpc = { path = "../../crates/nt-alpc" }
bytemuck = { version = "1", default-features = false }
nt-syscall = { path = "../../crates/nt-syscall" }
# ntdll_plan Step 6.A — the shared ntdll↔executive SSN/transport ABI (NT_NATIVE_SYSCALL_LABEL).
nt-syscall-abi = { path = "../../crates/nt-syscall-abi" }
nt-ntdll-layout = { path = "../../crates/nt-ntdll-layout" }
nt-config-abi = { path = "../../crates/nt-config-abi" }
nt-config-server = { path = "../../crates/nt-config-server" }
nt-config-client = { path = "../../crates/nt-config-client" }
nt-io-abi = { path = "../../crates/nt-io-abi" }
nt-io-manager = { path = "../../crates/nt-io-manager", features = ["object-manager"] }
nt-io-server = { path = "../../crates/nt-io-server", features = ["object-manager"] }
nt-io-client = { path = "../../crates/nt-io-client" }
nt-io-completion = { path = "../../crates/nt-io-completion" }
# Real NT CM_RESOURCE_LIST encoding — the resources PnP hands a driver at START.
nt-cm-resources = { path = "../../crates/nt-cm-resources" }
# PnP resource-assignment policy — PCI enum + BAR-size probe + CM_RESOURCE_LIST build. The
# executive-side broker (pnp.rs) mints the caps this policy's resource list describes.
nt-pnp = { path = "../../crates/nt-pnp" }
# PE loader — load + map + relocate a real Windows .sys binary in the isolated host.
nt-pe-loader = { path = "../../crates/nt-pe-loader" }
# Process Manager — real EPROCESS/ETHREAD + per-process handle tables + lifecycle. The live
# executive is CONVERGING its ad-hoc process-hosting (spawn_sec_image + badge/pi arrays + next_handle
# fakes) onto this host-tested subsystem (policy = nt-process; mechanism = seL4 caps stay executive).
nt-process = { path = "../../crates/nt-process" }
# Generic DLL registry — host-tested name/handle/VA decisions for demand-loaded shared-text DLLs.
nt-dll-registry = { path = "../../crates/nt-dll-registry" }
nt-loader-trace = { path = "../../crates/nt-loader-trace" }
nt-delay-execution = { path = "../../crates/nt-delay-execution" }
nt-thread-start = { path = "../../crates/nt-thread-start" }
nt-user-callback = { path = "../../crates/nt-user-callback" }
# The driver-visible ntoskrnl/hal export table + win32k import surface + SSDT recorder — the
# load-time contract the win32k.sys prototype resolves its imports against.
nt-compat-exports = { path = "../../crates/nt-compat-exports" }
# Registry hive model + image codec — the Config Manager decodes a real hive read off the FS.
nt-hive-core = { path = "../../crates/nt-hive-core" }
# Read-only regf parser — serves smss's registry from the REAL ReactOS SYSTEM hive read off disk.
nt-hive-regf = { path = "../../crates/nt-hive-regf" }
# Real in-memory filesystem (MemFs + Zw*/Nt* file APIs) — backs the executive's file-existence
# answers (NtQueryAttributesFile) with a real NT namespace instead of a name-scoped substring fake.
nt-fs = { path = "../../crates/nt-fs" }
# Kernel-exec runtime — the real KEVENT EventStore backs the sync-object syscalls; its
# session_section primitive backs win32k's MmCreateSection/MmMapView*.
nt-kernel-exec = { path = "../../crates/nt-kernel-exec" }
# Security Reference Monitor — its heap-free se_exports primitive backs win32k's SeExports data
# export (well-known SIDs / privilege LUIDs) + SeQueryAuthenticationIdToken (SYSTEM auth LUID).
nt-security = { path = "../../crates/nt-security" }
# KMDF/WDF runtime — host a real KMDF driver through the full WDF lifecycle.
nt-wdf-types = { path = "../../crates/nt-wdf-types" }
nt-wdf-object = { path = "../../crates/nt-wdf-object" }
nt-wdf-request = { path = "../../crates/nt-wdf-request" }
nt-wdf-queue = { path = "../../crates/nt-wdf-queue" }
nt-wdf-runtime = { path = "../../crates/nt-wdf-runtime" }

[profile.release]
panic = "abort"
opt-level = "s"
lto = false
debug = false
codegen-units = 1
overflow-checks = false

[profile.dev]
panic = "abort"
