[package]
name = "nt-alpc"
description = "The ALPC (NtAlpc*) adapter over the unified nt-port-core: connect/accept/send-receive + the ALPC message-attribute & port-section/view model, with the LPC↔ALPC bridge degradation policy (no_std + alloc, host-testable)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
std = ["nt-status/std"]

[dependencies]
nt-status = { workspace = true }
nt-port-core = { workspace = true }
nt-alpc-abi = { workspace = true }
bytemuck = { version = "1", default-features = false }

[dev-dependencies]
nt-lpc-server = { workspace = true }
nt-lpc-client = { workspace = true }
nt-lpc-abi = { workspace = true }

[lints.clippy]
undocumented_unsafe_blocks = "deny"
